@@ -8,7 +8,7 @@
 	border-top: 1px solid rgb(216, 219, 239); 
 	border-bottom: 1px solid rgb(216, 219, 239);
 	text-align: center;
-	background-image: url(/style/images/toolbox.png);
+	background: #e7e9f5 url(/style/images/toolbox.png) repeat-x;
 	padding-top: 4px;
 	padding-bottom: 4px;
 	margin-bottom: 0.25em;
