@@ -12,6 +12,6 @@
 
 .ep_toolbox_content {
 	padding: 10px;
-	background-image: url(/style/images/toolbox.png);
+	background: #e7e9f5 url(/style/images/toolbox.png) repeat-x;
 	border: solid 1px #d8dbef;
 }
