@@ -23,7 +23,7 @@
 .ep_upload_doc
 {
 	margin-bottom: 0.5em;
-	background-image: url(/style/images/toolbox.png);
+	background: #e7e9f5 url(/style/images/toolbox.png) repeat-x;
 }
 
 .ep_upload_doc .ep_upload_doc_title_bar {
