@@ -12,7 +12,7 @@
 
 .ep_view_subjects {
 	padding: 10px;
-	background-image: url(/style/images/toolbox.png);
+	background: #e7e9f5 url(/style/images/toolbox.png) repeat-x;
 	border: solid 1px #d8dbef;
 	margin-bottom: 20px;
 }
