@@ -5805,3 +5805,8 @@ PACKAGE: 2.2.99.2
 
 2006-12-04 cjg
  * Added missing phrase.
+
+2006-12-04 cjg
+ * Fixed issue with repeating background in toolboxes.
+ * Upped user history page size to 50 from 5.
+
